Change Log for Vertical Slice project
Note: Changes will be saved on playmode exit


Change 1
Date: 18/03/24
Author: Ignacy
Change Description: Created project and implemented a simple fog of war mechanic.


Change 2
Date: 20/03/24
Author: Ignacy
Change Description: Created this changelog script and file. Also changed order in layers and made collision script more future-proof.


Change 3
Date: 21/03/24
Author: Ignacy
Change Description: Added cinemachine to the project, increased size of fog of war. Attempted to implement wall interactions with fog of war but was unsuccessful.


Change 4
Date: 28/03/24
Author: Ignacy
Change Description: Added a different approach to field of view, added onscreen ui buttons for movement, implemented a movement script.


Change 5
Date: 05/04/24
Author: Ignacy
Change Description: Added a simple level, item counter, timer and an enemy using navmesh. Currently bugged, should fix it soon.