@@ -1,0 +1,17 @@
+using System.Collections;
+using System.Collections.Generic;
+using UnityEngine;
+
+public class CaptureDetector : MonoBehaviour
+{
+    [SerializeField] private GameObject gameOverScreen;
+    // Start is called before the first frame update
+    private void OnCollisionEnter2D(Collision2D collision)
+    {
+        if (collision.gameObject.CompareTag("Player"))
+        {
+            Time.timeScale = 0f;
+            gameOverScreen.SetActive(true);
+        }
+    }
+}
