@@ -1,0 +1,11 @@
+fileFormatVersion: 2
+guid: 69d9c35741437324b8ceccdb5c39f446
+MonoImporter:
+  externalObjects: {}
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
