@@ -1,0 +1,11 @@
+fileFormatVersion: 2
+guid: e2950c487d0b1c24980e651e216fc464
+MonoImporter:
+  externalObjects: {}
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
